@@ -1,5 +1,8 @@
 2008-06-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gcontenttype.c (g_content_type_get_icon): Use icons specified
+	in the shared mime database, if available.
+
 	* xdgmime/*: Sync with upstream. This brings support for
 	glob weights, generic icons, and changes the cache format to 
 	version 1.1.
